--- a/client/src/css/EditProduct.css
+++ b/client/src/css/EditProduct.css
@@ -4,8 +4,7 @@
   align-items: center;
   padding-top: 80px;
   padding-bottom: 100px;
-  position: relative;
-  padding-left: 450px; }
+  position: relative; }
   .admin-create-product h1 {
     color: black;
     font-family: Times New Roman, Serif, serif;
