--- a/client/src/css/Sort.css
+++ b/client/src/css/Sort.css
@@ -1,52 +1,44 @@
 .sort-container {
   margin-left: 50px;
   margin-top: 20px;
-  /* Styling for filter dropdown menus */
-}
-.sort-container.open {
-  display: block;
-}
-.sort-container .sort-buttons {
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-}
-.sort-container .sort-dropdown.open .sort-dropdown-menu {
-  display: block;
-}
-.sort-container .sort-dropdown-menu {
-  float: right;
-  display: none;
-  width: 100%;
-  padding: 10px;
-}
-.sort-container .sort-dropdown-menu label {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-  font-family: Times New Roman, Serif, serif;
-  font-size: 16px;
-}
-.sort-container .sort-dropdown-toggle {
-  width: 100%;
-  background-color: #ccb1a7;
-  border: 1px solid #ffffff;
-  border-radius: 3px;
-  padding: 8px 12px;
-  cursor: pointer;
-  transition: background-color 0.8ms ease;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-family: Times New Roman, Serif, serif;
-  font-size: 14px;
-  font-weight: bold;
-}
-.sort-container .sort-dropdown-toggle:hover {
-  background-color: #ffffff;
-  border-color: #363131;
-}
+  /* Styling for filter dropdown menus */ }
+  .sort-container.open {
+    display: block; }
+  .sort-container .sort-buttons {
+    margin: 10px;
+    display: flex;
+    justify-content: center; }
+  .sort-container .sort-dropdown.open .sort-dropdown-menu {
+    display: block; }
+  .sort-container .sort-dropdown-menu {
+    float: right;
+    display: none;
+    width: 100%;
+    padding: 10px; }
+  .sort-container .sort-dropdown-menu label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-family: Times New Roman, Serif, serif;
+    font-size: 16px; }
+  .sort-container .sort-dropdown-toggle {
+    width: 100%;
+    background-color: #ccb1a7;
+    border: 1px solid #ffffff;
+    border-radius: 3px;
+    padding: 8px 12px;
+    cursor: pointer;
+    transition: background-color 0.8ms ease;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: Times New Roman, Serif, serif;
+    font-size: 14px;
+    font-weight: bold; }
+  .sort-container .sort-dropdown-toggle:hover {
+    background-color: #ffffff;
+    border-color: #363131; }
 
 .sort-buttons > button {
   background-color: #ccb1a7;
@@ -60,13 +52,11 @@
   cursor: pointer;
   transition: all 0.3s ease;
   text-decoration: none;
-  font-family: Times New Roman, Serif, serif;
-}
+  font-family: Times New Roman, Serif, serif; }
 
 .sort-buttons > button:hover {
   background-color: #A26D5D;
-  border-color: #363131;
-}
+  border-color: #363131; }
 
 /* */
 /*
@@ -75,26 +65,21 @@
 .sort-button {
   position: relative;
   display: inline-flex;
-  align-items: center;
-}
-.sort-button h1 {
-  font-size: 18px;
-  font-family: Times New Roman, Serif, serif;
-  margin-left: 20px;
-}
+  align-items: center; }
+  .sort-button h1 {
+    font-size: 18px;
+    font-family: Times New Roman, Serif, serif;
+    margin-left: 20px; }
 
 .sort-icon {
   margin-top: 25px;
-  margin-right: 10px;
-}
+  margin-right: 10px; }
 
 .sort-icon:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .sort-icon > img {
   width: 35px;
-  height: 35px;
-}
+  height: 35px; }
 
 /*# sourceMappingURL=Sort.css.map */
