--- a/client/src/css/TShirtLayout.css
+++ b/client/src/css/TShirtLayout.css
@@ -4,8 +4,7 @@
 .tshirts-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 .tshirts-container img {
   width: calc(33.33% - 20px);
@@ -13,8 +12,7 @@
   height: auto;
   border: solid 2px #363131;
   border-radius: 5px;
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
 /*
     Troubleshooting with chatgpt to try and style the tshirts into rows
